--- a/src/Card/Card.module.css
+++ b/src/Card/Card.module.css
@@ -85,3 +85,38 @@
 .min span {
   margin-bottom: 1vw;
 }
+
+@media (max-width: 768px) {
+  .card {
+    width: 70vw;
+    height: 55vw;
+  }
+
+  .maxMin {
+    justify-content: center;
+    font-size: 2.8vw;
+    margin-bottom: 4vw;
+  }
+  .weatherImg {
+    width: 25vw;
+    height: 25vw;
+  }
+  .citie {
+    font-size: 6vw;
+  }
+  .weatherInfo {
+    margin-top: 3vw;
+    font-size: 3.1vw;
+  }
+
+  .actualTempWeather {
+    font-size: 6vw;
+  }
+  .btnContent {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 6vw;
+    padding-left: 30vw;
+    padding-bottom: 4vw;
+  }
+}
