refactoring stars render with loop and margin top card

--- a/src/Card/Card.module.css
+++ b/src/Card/Card.module.css
@@ -1,6 +1,6 @@
 .cardContainer {
   display: inline-table;
-  margin: 4vw;
+  margin: 0vw 4vw 4vw 4vw;
   overflow: hidden;
   width: 35vw;
   height: 5vw;
