--- a/src/Card/Card.module.css
+++ b/src/Card/Card.module.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 15px;
+  margin-top: 2rem;
   margin-bottom: 1vw;
   color: aliceblue;
   backdrop-filter: blur(5px);
